tempfile/auto_impl/tests/compile-fail/attr_on_impl_block.rs
use auto_impl::auto_impl;


trait Foo {}

#[auto_impl(&, &mut)]
impl Foo for usize {}

fn main() {}
